--- a/Gruppprojekt-Grupp2/index.html
+++ b/Gruppprojekt-Grupp2/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="src/assets/garnnystan.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Super Yarn Company</title>
+    <title>Super Yarn Store</title>
   </head>
   <body>
     <div id="root"></div>
